--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@tailwindcss/vite": "^4.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
