--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "overrides": {
     "react-google-places-autocomplete": {
-      "react": "^18.2.0"
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
     }
   }
 }
